radar-service/deployment/radar-backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: radar-service-backend
  labels:
    name: radar-service-backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: radar-service-backend
  type: ClusterIP
