radar-service/deployment/radar-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radar-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: backend-radar.qa.knoldus.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: radar-service-backend
                port:
                  number: 8080
